Changelog
=========


2.2 (unreleased)
----------------

- Add "assigned_client" index to metadata (used for remote-task icon).
  Issue #1300 Mandantenuebergreifende Aufgaben sollten speziell markiert werden koennen.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1300
  [jone]

- Adjust Worfklow: Allow resolved-in-progress also for reponsible or inbox group users.
  Issue #1371 Anpassungen Aufgaben Workflow
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1371
  [phgross]

- Adjust Worfklow: Disallow to add documents when a task is resolved.
  Issue #1371 Anpassungen Aufgaben Workflow
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1371
  [phgross]

- RelatedDocumentsTableSource: Store info if doc was listed as a relation,
  so the tabbedview helper can use a special icon for related documents.
  [lgraf]

- Removed 'List folder contents' permission from anyone but Manager in
  task workflow.
  [lgraf]

- Added necessary permissions for Administrator role
  [lgraf]

- Implement wizard for copying documents when closing a uniref task.
  Issue #1376 Auftragstyp "Zur Kenntnisnahme": Aktion abschliessen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1376
  [jone]

- Made some adjustments on the reponse functionality:
   - Made the transition field readonly.
   - Remove direct_response functionality, is no longer used.
   - Removed the add response action.
  Issue #1377 Ueberarbeitung Antwort einer Aufgaben
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1377
  [phgross]

- Implements some workflow adjustments:
   - Removed resolved-open(wieder eroeffnen) transition.
   - Added new transition resolved-in-progress (ueberarbeiten) instead of resolved-open.
   - Add no-successors checks for the resolve and close transitions.
  [phgross]

- Task overview: display responsible of tasks referenced in response.
  [jone]
