@@ -8,4 +8,5 @@
   <column value="client_id" />
   <column value="sequence_number" />
   <column value="assigned_client" />
+  <column value="is_subtask" />
 </object>
